<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="54dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/clock_icon"
        android:contentDescription="Clock"
        app:layout_constraintBottom_toTopOf="@+id/layout"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/clock_icon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:text="Office Hours"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dip"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal|vertical">

        <HorizontalScrollView
            android:id="@+id/horizontalView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:scrollbars="horizontal|vertical">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:gravity="center_horizontal">

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:gravity="center_horizontal"
                        android:padding="5dip"
                        android:text="@string/name" />

                    <TextView
                        android:gravity="center_horizontal"
                        android:padding="5dip"
                        android:text="@string/type" />

                    <TextView
                        android:gravity="center_horizontal"
                        android:padding="5dip"
                        android:text="@string/location" />

                    <TextView
                        android:gravity="center_horizontal"
                        android:padding="5dip"
                        android:text="@string/status" />

                    <TextView
                        android:gravity="center_horizontal"
                        android:padding="5dip"
                        android:text="@string/hours" />

                    <TextView
                        android:gravity="center_horizontal"
                        android:padding="5dip"
                        android:text="@string/information" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:gravity="center_horizontal"
                        android:padding="5dip"
                        android:text="Jesus" />

                    <TextView
                        android:gravity="center_horizontal"
                        android:padding="5dip"
                        android:text="Teacher Assistant" />

                    <TextView
                        android:gravity="center_horizontal"
                        android:padding="5dip"
                        android:text="Science Hall, RM 00" />

                    <TextView
                        android:gravity="center_horizontal"
                        android:padding="5dip"
                        android:text="Available" />

                    <TextView
                        android:gravity="center_horizontal"
                        android:padding="5dip"
                        android:text="10:30AM to 12:30PM" />

                    <TextView
                        android:gravity="center_horizontal"
                        android:padding="5dip"
                        android:text="zoom meeting link" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:gravity="center_horizontal"
                        android:padding="5dip"
                        android:text="Professor Mac" />

                    <TextView
                        android:gravity="center_horizontal"
                        android:padding="5dip"
                        android:text="Machine Prog" />

                    <TextView
                        android:gravity="center_horizontal"
                        android:padding="5dip"
                        android:text="Science Hall, RM 800" />

                    <TextView
                        android:gravity="center_horizontal"
                        android:padding="5dip"
                        android:text="Unavailable" />

                    <TextView
                        android:gravity="center_horizontal"
                        android:padding="5dip"
                        android:text="2PM to 4PM" />

                    <TextView
                        android:gravity="center_horizontal"
                        android:padding="5dip"
                        android:text="website link" />
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="imageView4" />

</androidx.constraintlayout.widget.ConstraintLayout>